Fix: hero image on mobile.

--- a/assets/base.css
+++ b/assets/base.css
@@ -28,18 +28,36 @@ ul {
 
 /* S: Header Section */
 
-#getmore-header {
-  width: 100%;
-  height: calc(100vh + 60px);
+#getmore-header::before {
+  content: '';
 
-  display: flex;
-
-  background-image: -webkit-image-set(url('hero.jpg') 1x, url('hero@2x.jpg') 2x, url('hero@3x.jpg') 3x);
+  background-image: -webkit-image-set(
+    url('assets/hero.jpg') 1x,
+    url('assets/hero@2x.jpg') 2x,
+    url('assets/hero@3x.jpg') 3x
+  );
 
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100vw;
+  height: 100lvh;
+
+  z-index: -1;
+}
+
+#getmore-header {
+  width: 100%;
+
+  min-height: 100dvh;
+  min-height: 100vh;
+
+  display: flex;
   color: #fff;
 }
 
